--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -85,7 +85,7 @@ Assuming a background of neutrality means that there needs to be a way to identi
 Since 2005 there have been multiple reviews published (see @Nielsen2005, @sabeti2006positive, @Utsunomiya2015, @Vitti2013 and @Haasl2016) on methods of identifying selection, as there has been a renewed interest to examine selection at a genome wide scale due to increased availability of whole genome genotype data. Methods that have been developed to detect signatures of selection can be placed into two main categories, those that only work on a single population and those that compare between populations. There are also specific underlying genetic features that these methods can use, such as allele frequency (frequency spectrum methods) or differences in haplotype (linkage methods). There are also methods that combine different approaches (composite methods). A summary of selection methods is provided in Table \@ref(tab:selectionMethods).
 
 
-The different methods for detecting selection work best over different time periods. Recent soft sweeps are able to be detected well with \gls{ld}-based methods, but frequency spectrum tests struggle [@Hermisson2005]. The opposite applies in the case of hard sweeps [@Hermisson2005]. In humans, the method that is able to detect the most ancient selection, ranging to millions of years ago is the K~a~/K~s~ ratio, however if a strong background of neutrality is present this can undermine the effectiveness of the test. \Gls{td} is able to detect selection events as old as 250,000 years ago in regions of low diversity containing an excess of rare alleles. \Gls{fwh} is able to detect events less than 80,000 years ago based on derived alleles having arisen through mutation and then risen to a high frequency via hitch-hiking. F~ST~, in the range of less than 50,000 to 70,000 years ago, picks up geographic separation of populations that have been subject to different physical and cultural environments based on the changes in allele frequency in one population versus another. Methods relying on long haplotypes such as \gls{ihs} have the shortest range at less than 30,000 years ago for a long haplotype that hasn't had time to break down through recombination and contains a high frequency variant. Partial sweeps can also be detected down to a \gls{maf} of approximately 10% [@sabeti2006positive].
+The different methods for detecting selection work best over different time periods. Recent soft sweeps are able to be detected well with \gls{ld}-based methods, but frequency spectrum tests struggle [@Hermisson2005]. The opposite applies in the case of hard sweeps [@Hermisson2005]. In humans, the method that is able to detect the most ancient selection, ranging to millions of years ago is the K~a~/K~s~ ratio, however if a strong background of neutrality is present this can undermine the effectiveness of the test. \Gls{td} is able to detect selection events as old as 250,000 years ago in regions of low diversity containing an excess of rare alleles. \Gls{fwh} is able to detect events less than 80,000 years ago based on derived alleles having arisen through mutation and then risen to a high frequency via hitch-hiking. F~ST~, in the range of less than 50,000 to 70,000 years ago, picks up geographic separation of populations that have been subject to different physical and cultural environments based on the changes in allele frequency in one population versus another. Methods relying on long haplotypes such as \gls{ihs} have the shortest range at less than 30,000 years ago for a long haplotype that has not had time to break down through recombination and contains a high frequency variant. Partial sweeps can also be detected down to a \gls{maf} of approximately 10% [@sabeti2006positive].
 
 ```{r, eval = TRUE, echo = FALSE}
 tibble(
@@ -107,7 +107,7 @@ The HKA test [@Hudson1987] compares between and within populations the polymorph
 
 ### Haplotypic methods
 
-There are a few methods that are different derivations and applications of looking at haplotype decay around a core \gls{snp}. @sabeti2006positive put forward the concept of using \gls{ehh}. The haplotypes that had unusually long haplotype homozygosity and a high frequency in the population indicated that the polymorphism had risen in prominence faster than it would be expected under the neutral model and therefore under selection. The main concept is that a beneficial mutation wouldn't solely be selected for, but the surrounding region would initially be selected and therefore have a conservation effect. As time and generations progressed, this haplotype would decay due to recombination, and this haplotype decay can be used to assist in the ageing of the selection event. In order to use haplotypic methods, there is a requirement to establish the alleles that were inherited from the maternal side and those that were inherited from the paternal side constituting the two haplotypes (phasing).
+There are a few methods that are different derivations and applications of looking at haplotype decay around a core \gls{snp}. @sabeti2006positive put forward the concept of using \gls{ehh}. The haplotypes that had unusually long haplotype homozygosity and a high frequency in the population indicated that the polymorphism had risen in prominence faster than it would be expected under the neutral model and therefore under selection. The main concept is that a beneficial mutation would not solely be selected for, but the surrounding region would initially be selected and therefore have a conservation effect. As time and generations progressed, this haplotype would decay due to recombination, and this haplotype decay can be used to assist in the ageing of the selection event. In order to use haplotypic methods, there is a requirement to establish the alleles that were inherited from the maternal side and those that were inherited from the paternal side constituting the two haplotypes (phasing).
 
 #### Integrated haplotype homozygosity score
 
@@ -224,7 +224,7 @@ meta\-SS = \frac{\sum\limits_{i =1}^k {\omega_i Z_i}}{\sqrt{\sum\limits_{i =1}^k
 
 ### Power
 
-Power to detect selected sites can be very limited if the site is not an outlier from empirical methods, such as simulations or using permutations of the data, as they won't 'stand out' [@Teshima2006]. A key consideration when selecting a particular method for detecting selection is the limitations the method has on power to detect a selective event, such as starting and final allele frequency of the variant after a sweep. \Gls{td} is powered for low and intermediate frequency variants [@Simonsen1995] whereas \gls{fwh} is powered for intermediate and high frequency variants. Some methods such as \gls{ihs}, are good for detection of middle frequency variants. \Gls{xpehh}, on the other hand is powered at the fixation ends of the spectrum. \Gls{xpehh}, because it is correlated with \gls{ld}, lacks power to detect ancient selective events [@Chen2010].  Sample size is another factor to consider. \Gls{ihs} has modest reduction of power when reducing samples until approximately 40 samples of single chromosomes. \Gls{xpehh} can maintain power down to about 20 samples of single chromosomes, so long as the reference population is a fixed size. The grouping of similar genetic populations may be an option to increase power with low sample sizes [@pickrell2009signals]). For F~ST~, power to detect selection should be sufficient if sample size is > 1/F~ST~ [@Bhatia2013a; @Bhatia2011]
+Power to detect selected sites can be very limited if the site is not an outlier from empirical methods, such as simulations or using permutations of the data, as they would not 'stand out' [@Teshima2006]. A key consideration when selecting a particular method for detecting selection is the limitations the method has on power to detect a selective event, such as starting and final allele frequency of the variant after a sweep. \Gls{td} is powered for low and intermediate frequency variants [@Simonsen1995] whereas \gls{fwh} is powered for intermediate and high frequency variants. Some methods such as \gls{ihs}, are good for detection of middle frequency variants. \Gls{xpehh}, on the other hand is powered at the fixation ends of the spectrum. \Gls{xpehh}, because it is correlated with \gls{ld}, lacks power to detect ancient selective events [@Chen2010].  Sample size is another factor to consider. \Gls{ihs} has modest reduction of power when reducing samples until approximately 40 samples of single chromosomes. \Gls{xpehh} can maintain power down to about 20 samples of single chromosomes, so long as the reference population is a fixed size. The grouping of similar genetic populations may be an option to increase power with low sample sizes [@pickrell2009signals]). For F~ST~, power to detect selection should be sufficient if sample size is > 1/F~ST~ [@Bhatia2013a; @Bhatia2011]
 
 Power of a statistic also needs to be considered for the type of selective sweep that may have occurred, such is the case with \gls{nsl}, which has similar power to detect selection to \gls{ihs}, but performs better for larger starting allele frequencies. It also outperforms \gls{ihs} in power in both hard and soft sweep scenarios [@Ferrer-Admetlla2014]. When it comes to picking up demographic events, haplotype tests are useful at detecting recent and more moderate bottlenecks, frequency spectrum tests (such as \gls{fwh}/ \gls{td}) have the best power for detecting moderately ancestral severe bottlenecks [@Depaulis2003], whereas \gls{ze} and \gls{flf} have the most power during population expansion [@Zeng2006;@Ramirez-Soriano2008].
 
@@ -246,7 +246,7 @@ In order to use haplotypic methods, (re)construction of haplotypes is required. 
 
 \Gls{gwas} are a method to scan genomes, usually \gls{snp} genotype data, for association with a phenotype. The strength of \gls{gwas} is that prior knowledge of loci is not required, and can be used as a tool for hypothesis generation. \Gls{gwas}, because of the large number of association tests, require large cohorts of samples to achieve sufficient power for statistical significance. As the effect size for a variant decreases, larger sample sizes are also needed, as power is proportional to the square of the effect size [@Korte2013; @Hemani2013]. Limitations in recruiting sufficient numbers of participants for \gls{gwas} therefore requires new ways of increasing power to detect smaller effects without needing to increase sample size, as outlined in this section. The goal of being able to prioritise \gls{gwas} results by using additional information, such as incorporating \gls{ld} or selection statistics by using a weighting system to increase the power of a \gls{gwas}, has been suggested [@Ayodo2007; @Roeder2006]. When \gls{ld} between observed \glspl{snp} and causal variants is high, such as in the case of selection, greater power in \gls{gwas} can be achieved by focusing on searching for non-additive variance [@Hemani2013].
 
-The basis of \gls{gwas} studies is to identify \glspl{snp} that are associated with differences in the mean of a trait. These studies don't necessarily identify the causal \gls{snp} but instead identify a marker for the causal variant, usually in \gls{ld}. @Fisher1919 showed that total genetic variance could be split into components of additive, dominance and epistatic effects. The additive component has been shown to contribute the most to the overall genetic variance, with epistatic variance contributing little in an outbred population [@Hill2008]. Complex traits gain their complexity from being the sum of interactions from many small effect loci, or the product of non-additive interactions between loci and the environment, making it challenging to find the exact contribution of a locus to a trait [@Fu2013a]. These small, true effect loci can end up non-significant due to the noise in the data, but might be able to retrieved using methods that find non-additive effects. 
+The basis of \gls{gwas} studies is to identify \glspl{snp} that are associated with differences in the mean of a trait. These studies do not necessarily identify the causal \gls{snp} but instead identify a marker for the causal variant, usually in \gls{ld}. @Fisher1919 showed that total genetic variance could be split into components of additive, dominance and epistatic effects. The additive component has been shown to contribute the most to the overall genetic variance, with epistatic variance contributing little in an outbred population [@Hill2008]. Complex traits gain their complexity from being the sum of interactions from many small effect loci, or the product of non-additive interactions between loci and the environment, making it challenging to find the exact contribution of a locus to a trait [@Fu2013a]. These small, true effect loci can end up non-significant due to the noise in the data, but might be able to retrieved using methods that find non-additive effects. 
 
 Explained heritability is defined as the proportion of heritability (or phenotypic variance) explained by a collection of genetic variants, with the "missing" portion referring to the unaccounted for genetic variance that has been estimated through family studies. When the ratio of explained heritability to total heritability is < 1, the unexplained component is defined as missing heritability [@Zuk2012]. The use of methods that capture additional loci with non-additive effects should be able to explain more of missing heritability.
 
@@ -285,7 +285,7 @@ Metabolic syndrome and gout have associations and interactions with genes in met
 
 The inclusion of Oceanic populations in multi-population studies has had a focus on genetic structure, measured via F~ST~ for differentiation to investigate population ancestry, rather than selection [@Friedlaender2008; @Tennessen2011]. The migratory history of Polynesian populations suggests that the points of differentiation are likely the events possibly occurring since the out of Africa dispersal ~60,000 years ago [@Soares2012] with settlement of Near Oceania ~40,000 years ago, and Remote Oceania ~3,100 years ago [@Matisoo-Smith2004] and the Polynesian Triangle (bounded by New Zealand, Easter Island, and Hawaii) ~1,000-1,200 years ago [@Wilmshurst2011]. The time frame for these events means that nearly all of the previously mentioned methods would still be within their powered time frames to detect selective events. The haplotypic methods would possibly not be able to detect selective events as old as the Africa dispersal and may be at the fringe of the time period for the Near Oceania settlement. 
 
-Large population comparison studies have used Oceanic populations, but analyses were limited to Melanesian and Papuan populations because the cohort used was the Human Genome Diversity Project [@Cann2002] which didn't include Polynesian populations. The Melanesian and Papuan populations are often used to infer the genetics of Polynesian populations. This extrapolation doesn't take into account the current ancestry predictions of Polynesians populations being more closely related to Asian/Taiwanese Aboriginal populations than Melanesian groups, or the presence of European admixture [@Friedlaender2008]. Genomic DNA and mitochondrial DNA suggest Polynesians have East Asian ancestry, with substantial male Melanesian admixture [@Kayser2008a]. There has been limited analysis of selection in Polynesian populations beyond @Kimura2008, where 24 Tongan samples in conjunction with other populations were analysed using both F~ST~ and a modified \gls{ehh} test. Genomic regions with evidence of having been selected in the Tongan samples were potential candidates for increased fat, muscle and bone masses [@Kimura2008].
+Large population comparison studies have used Oceanic populations, but analyses were limited to Melanesian and Papuan populations because the cohort used was the Human Genome Diversity Project [@Cann2002] which did not include Polynesian populations. The Melanesian and Papuan populations are often used to infer the genetics of Polynesian populations. This extrapolation does not take into account the current ancestry predictions of Polynesians populations being more closely related to Asian/Taiwanese Aboriginal populations than Melanesian groups, or the presence of European admixture [@Friedlaender2008]. Genomic DNA and mitochondrial DNA suggest Polynesians have East Asian ancestry, with substantial male Melanesian admixture [@Kayser2008a]. There has been limited analysis of selection in Polynesian populations beyond @Kimura2008, where 24 Tongan samples in conjunction with other populations were analysed using both F~ST~ and a modified \gls{ehh} test. Genomic regions with evidence of having been selected in the Tongan samples were potential candidates for increased fat, muscle and bone masses [@Kimura2008].
 
 A few candidate-genes for selection which also have been associated with obesity and \gls{t2d} in Polynesian populations have been investigated, such as the _PPARGC1A_ [@Myles2011] and _CREBRF_ [@Minster2016] genes. The "Thrifty-gene hypothesis" [@Neel1962] has been the reasoning behind why these loci may have undergone selection. The hypothesis was originally conceived to attempt to explain the difference in prevalence of \gls{t2d}, that is, given that there should be a strong selective pressure against it, there must be some genetic advantage. This hypothesis has been challenged in the Polynesian context as fitting a particular narrative [@Gosling2014; @Gosling2015; @Cadzow2016] with an alternative hypothesis being a link between the metabolic diseases and the innate immune system that is under selective pressure via an infectious agent, such as malaria, leading to disease susceptibility in these populations [@Gosling2015].
 
@@ -297,7 +297,7 @@ The genetic influence of urate and gout is found in the under-excretion of serum
 
 <!-- Heritability of \gls{bmi} ranges from 45% to 84% in twin studies [@Schousboe2003]. -->
 
-There have been multiple genetic loci associated with \gls{t2d} [@Billings2010] and \gls{bmi} [@Locke2015], however, @Chen2010 found no evidence for enrichment in selection for \gls{bmi}, but found significant enrichment for \gls{t2d}. The genes associated with \gls{t2d} have been found to be differentiated by population, however the individual \glspl{snp} are often not [@pickrell2009signals]. @Koh2014 identified six \glspl{snp} in or near nine genes that had been reported as \gls{t2d} associated and overlapped with evidence of positive selection in East Asian populations. Common variants that have been found in European populations associating with obesity don't replicate in the Samoan population [@Karns2012], although this is likely due to power. The non-replication of European variants in Polynesians and the high prevalence of obesity in Polynesian populations suggest there is likely to be some population specific variants that are yet to be identified, similar to the Polynesian specific variant in _CREBRF_ (rs373863828), associated with obesity and protection for \gls{t2d}, identified in the Samoan population [@Minster2016]. Rare variants tend to be recent and therefore geographically restricted [@1KGP2012].
+There have been multiple genetic loci associated with \gls{t2d} [@Billings2010] and \gls{bmi} [@Locke2015], however, @Chen2010 found no evidence for enrichment in selection for \gls{bmi}, but found significant enrichment for \gls{t2d}. The genes associated with \gls{t2d} have been found to be differentiated by population, however the individual \glspl{snp} are often not [@pickrell2009signals]. @Koh2014 identified six \glspl{snp} in or near nine genes that had been reported as \gls{t2d} associated and overlapped with evidence of positive selection in East Asian populations. Common variants that have been found in European populations associating with obesity do not replicate in the Samoan population [@Karns2012], although this is likely due to power. The non-replication of European variants in Polynesians and the high prevalence of obesity in Polynesian populations suggest there is likely to be some population specific variants that are yet to be identified, similar to the Polynesian specific variant in _CREBRF_ (rs373863828), associated with obesity and protection for \gls{t2d}, identified in the Samoan population [@Minster2016]. Rare variants tend to be recent and therefore geographically restricted [@1KGP2012].
 
 The benefits of urate are in line with the categories found to be enriched by selection in genome wide scans. Urate is an anti-oxidant in the blood, acting to protect not just erythrocytes but also T and B lymphocytes and macrophages [@Ames1981]. Urate has also been hypothesised to have had a survival advantage during the Miocene period, when a series of mutations in urate oxidase occurred, leading to elevated urate. \Gls{hu} enables blood pressure to be maintained under low salt dietary conditions [@Watanabe2002]. Serum urate is also a potent anti-oxidant which accounts for >50% of the anti-oxidant activity of the blood [@Glantzounis2005; @Parmar2009]. Later in life elevated serum urate is associated with increased cognitive function [@Euser2009]. Urate crystals activate the NLRP3 inflammasome which plays an important role in systemic infection and sepsis [@Opitz2009]. The role of urate in these situations shows that while \gls{hu} is now considered as contributing to disease (such as gout), in the past it may have influenced longevity and survival, therefore increasing reproductive success and being a phenotype that has undergone selection. 
 
