--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -3116,7 +3116,7 @@ Pathway analysis on the regions with possible selection in the Polynesian popula
 
 In the Western Polynesian populations the only pathway that was in common between \gls{sam} and \gls{ton} was ABC transporters. There was only one gene in the ABC transporters pathway that had an association with urate and gout from the \gls{gwas} catalog. The gene was _ABCG2_, which has a strong effect for gout in Western Polynesian populations [@Phipps-Green2010] and also had haplotypic evidence in \gls{ton} with \gls{ihs}. One of the other genes in this pathway was _ABCC4_ which recently had Western Polynesian specific variants, such as rs972711951, identified and associated with gout [@Tanner2017]. There was evidence of selection at _ABCC4_ in \gls{cim}, \gls{nzm}, and \gls{sam} (Table \@ref(tab:ihsnslPolGenes)).
 
-The gene _CNTN4_, encoding Contactin 4, had the highest number of significant markers in \gls{cim} and third most in \gls{nzm} for \gls{ihs}. This particular locus hasn't been associated with urate at a genome-wide significance level, however there is evidence to suggest there may be an association [@Chittoor2016], but this wasn't observed with gout in either of the European or Polynesian \gls{gwas} analyses performed in chapter 5 (section \@ref(gwasResults)). There has also been prior selective evidence for this locus in the Biaka Pygmy and Bantu populations, but not in more closely ancestrally related populations of the Polynesian populations [@pickrell2009signals].
+The gene _CNTN4_, encoding Contactin 4, had the highest number of significant markers in \gls{cim} and third most in \gls{nzm} for \gls{ihs}. This particular locus has not been associated with urate at a genome-wide significance level, however there is evidence to suggest there may be an association [@Chittoor2016], but this was not observed with gout in either of the European or Polynesian \gls{gwas} analyses performed in chapter 5 (section \@ref(gwasResults)). There has also been prior selective evidence for this locus in the Biaka Pygmy and Bantu populations, but not in more closely ancestrally related populations of the Polynesian populations [@pickrell2009signals].
 
 When looking at genes that have been associated with urate, gout and related co-morbidities, there is no apparent difference in the number of genes showing signs of selection in Polynesian populations, when compared to the other populations (Table \@ref(tab:superDiseaseGenesTab)). However, there were differences between the Eastern and Western Polynesian populations for the \gls{ihs} and \gls{nsl} results, supporting the differences in ancestral background. There was also evidence of selection in loci that were associated with malaria and also with \gls{t2d} and obesity, and is thus suggestive of a role for infectious disease applying selective pressure.
 
@@ -3149,7 +3149,7 @@ cim_nzm_shared_kegg %>% select(-cim) %>% mutate(nzm = str_split(nzm, ";")) %>% s
 
 The second objective was to investigate regions associated with urate, gout and related co-morbidities for evidence of selection in the Polynesian populations. There was evidence for selection in urate associated loci. However, the evidence did not appear to be specific for urate itself, but for loci that are involved in more general metabolic pathways. The main effect loci identified through \gls{gwas}, _SLC2A9_ and _ABCG2_, had limited evidence of positive selection. _ABCG2_ had a significant marker (rs2622626) with \gls{ihs} and \gls{nsl} and only in \gls{ton} from the Polynesian populations, the only other populations were \gls{gih} and \gls{itu} from the \gls{sas} super population. This marker showing significance however might be due to the gout prevalence of the \gls{ton} sample population which was 54%. The same result is not seen in closest population with the most similar ancestral background, \gls{sam}, where the prevalence of gout in the sample population was much lower at 12%. Although rs2622626 has not previously been associated with gout in East Asian populations [@zhang2016associations], nor did it have an association in the Polyesian gout \gls{gwas} analysis in chapter 5 (P > 0.1).
 
-Only _RREB1_ and _IGFR1_ had haplotypic evidence with \gls{xpehh} across multiple other populations. The other gene of note that didn't have haplotypic evidence, but did have multiple windows in the 1^st^ percentile across multiple statistics and all Polynesian populations was _BCAS3._ _BCAS3_ had been previously identified as selected in @Grossman2013. _RREB1_ was also associated with obesity and \gls{t2d} traits. @Zhang2013a had reported a variant nearby to _RREB1_ (rs675209) as having evidence of selection but this particular marker was absent from the CoreExome \gls{snp} array.
+Only _RREB1_ and _IGFR1_ had haplotypic evidence with \gls{xpehh} across multiple other populations. The other gene of note that did not have haplotypic evidence, but did have multiple windows in the 1^st^ percentile across multiple statistics and all Polynesian populations was _BCAS3._ _BCAS3_ had been previously identified as selected in @Grossman2013. _RREB1_ was also associated with obesity and \gls{t2d} traits. @Zhang2013a had reported a variant nearby to _RREB1_ (rs675209) as having evidence of selection but this particular marker was absent from the CoreExome \gls{snp} array.
 
 There was a similar situation with obesity, \gls{t2d}, kidney disease, and metabolic syndrome, where evidence of possible selection was found for multiple loci. The number of genes that had possible evidence of selection was similar in the Polynesian populations to that of the other populations. An interesting point however, was that the Western Polynesian populations had the fewest genes associated with \gls{t2d} identified with \gls{ihs} or \gls{nsl} than all the other populations, despite Polynesian populations having a high prevalence of \gls{t2d} [@Winnard2013]. 
 
