--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -146,9 +146,9 @@ Disease associated markers and their annotated genes were downloaded from the \g
 
 The genetic variation captured by \gls{pca} was plotted to visualise the relationship of individuals to one another (Figure \@ref(fig:allpopPCA)). Starting from \gls{pc} 1, each subsequent \gls{pc} captured less of the variation than the previous. \Glsentrydescplural{pc} for the merged \gls{1kgp} data and the New Zealand samples showed in the first two components (which capture the most variation) that the \gls{afr}, \gls{eur}, and \gls{sas} super populations all formed separate groupings. \Gls{pc} 1 was responsible for separating the \gls{afr} populations from the others, and \gls{pc} 2 was largely responsible for separating the \gls{eur} and \gls{sas} from each other, and from the \gls{eas} and \gls{pol} populations. The \gls{eas} and \gls{pol} populations were extremely similar in \gls{pc} 1 but the \gls{pol} populations were spread with \gls{pc} 2, with the majority of the spread being accounted for by the Eastern Polynesian populations whereas the Western Polynesian populations had a tight grouping at -0.025 on \gls{pc} 2, slightly below the \gls{eas} group. This can be observed when \gls{pc} 6 is used to separate the Polynesian populations (Figure \@ref(fig:polPCA)). \Gls{pc} 3 separated the \gls{pol} populations from the \gls{eas} populations (Figure \@ref(fig:allpopPCA) B) and \gls{pc} 4 separated the \gls{amr} and \gls{sas} populations (Figure \@ref(fig:allpopPCA) C). The Polynesian populations were split into Eastern and Western Polynesian sub-groups with \gls{pc} 6 (Figure \@ref(fig:polPCA)).
 
-The admixture of the \gls{amr} populations [@1KGP2015snp] was evident in \gls{pc} 1 with a large spread centred with the \gls{eur} populations. The first four \gls{pc} indicated that the six super populations could form super population clusters based on the genetic variation. There was no distinction between the \gls{ceu}, \gls{gbr}, and \gls{nzc} populations (Figure \@ref(fig:eurPCA)), this indicated that the use of \gls{snp} array versus sequence data wasn't a major source of variability in the dataset. 
+The admixture of the \gls{amr} populations [@1KGP2015snp] was evident in \gls{pc} 1 with a large spread centred with the \gls{eur} populations. The first four \gls{pc} indicated that the six super populations could form super population clusters based on the genetic variation. There was no distinction between the \gls{ceu}, \gls{gbr}, and \gls{nzc} populations (Figure \@ref(fig:eurPCA)), this indicated that the use of \gls{snp} array versus sequence data was not a major source of variability in the dataset. 
 
-(ref:allpopPCA) A) Principal components 1 and 2 for all populations. B) Principal components 1 and 3 for all populations. C) Principal components 1 and 4 for all populationsColoured by super population grouping.
+(ref:allpopPCA) A) Principal components 1 and 2 for all populations. B) Principal components 1 and 3 for all populations. C) Principal components 1 and 4 for all populations. Coloured by super population grouping.
 
 ```{r allpopPCA, fig.cap = '(ref:allpopPCA)', echo = FALSE, fig.height = 6, fig.width=5, fig.align='center'}
 eigen <- read.table('~/data/NZ_coreExome_1kgp/PCA/indiv_pops/NZ_1KGP_allchr_indep_eigen.pca.evec', stringsAsFactors = FALSE)
@@ -407,7 +407,7 @@ bind_rows(list(
 ```
 
 
-There were differing numbers of windows used for each population, ranging from a minimum of `r create_windowTable() %>% summarise(min(min))` to a maximum of `r create_windowTable() %>% summarise(max(max))`. The mean number of windows per population was `r create_windowTable() %>% summarise(round(mean(mean), digits = 1))` (SD `r create_windowTable() %>% summarise(round(sd(mean), digits = 1))`) and was due to multiple windows having the same value. Table \@ref(tab:proportion) and Table \@ref(tab:exclusivity) show the proportion and exclusivity of the clusters respectively, for the clustering of populations by cutting the dendrograms to create six groups, based on the number of super populations. Proportions were calculated independently for each super population based on the cluster group with the maximum number of populations from a particular super population, whereas, exclusivity of each cluster was calculated by using the proportions of populations from a given super population assigned compared to the total number of individual populations to assigned that cluster. Clustering based on the windows of the extreme tails of the selection statistic distributions resulted in a higher number of the individual populations being clustered into their super populations than for the chromosome-wide selection statistics, and the clusters were also more exclusive to the super populations. This shows that the aggregate frequency spectrum based selection and neutrality statistics don't capture the population differentiation, but that the extremes for each population do replicate the grouping that population differentiation had with F~ST~.
+There were differing numbers of windows used for each population, ranging from a minimum of `r create_windowTable() %>% summarise(min(min))` to a maximum of `r create_windowTable() %>% summarise(max(max))`. The mean number of windows per population was `r create_windowTable() %>% summarise(round(mean(mean), digits = 1))` (SD `r create_windowTable() %>% summarise(round(sd(mean), digits = 1))`) and was due to multiple windows having the same value. Table \@ref(tab:proportion) and Table \@ref(tab:exclusivity) show the proportion and exclusivity of the clusters respectively, for the clustering of populations by cutting the dendrograms to create six groups, based on the number of super populations. Proportions were calculated independently for each super population based on the cluster group with the maximum number of populations from a particular super population, whereas, exclusivity of each cluster was calculated by using the proportions of populations from a given super population assigned compared to the total number of individual populations to assigned that cluster. Clustering based on the windows of the extreme tails of the selection statistic distributions resulted in a higher number of the individual populations being clustered into their super populations than for the chromosome-wide selection statistics, and the clusters were also more exclusive to the super populations. This shows that the aggregate frequency spectrum based selection and neutrality statistics do not capture the population differentiation, but that the extremes for each population do replicate the grouping that population differentiation had with F~ST~.
 
 The following subsections will cover the distributions for the the frequency based statistics calculated genome-wide in windows to highlight that populations within a super popuation had similar distributions, but between super populations there were diferences. For each statistic there will also be a description of the clustering that was done on the 1^st^ and 99^th^ percentiles, and make note of any of the metabolic disease associated loci from chapter \@ref(selectionResults) that met the selection thresholds that were found in windows from the distribution extremes. There is a subtle difference between the windows that were deemed of interest in chapter \@ref(selectionResults), and the windows in the extremes of the distributions, in that the latter does not have the greater or less than zero condition. Each statistic also represents different 'partitions' of the frequency spectrum with \gls{td} representing low versus intermediate frequency variants, \gls{flf} representing singletons versus intermediate frequency variants, \gls{fwh} representing intermediate versus high frequency derived variants, and \gls{ze} representing low verseus high frequency variants.
 
@@ -1748,7 +1748,7 @@ The \gls{gwas} catalog had `r length(unique(t2d_GR$SYMBOL))` genes associated wi
 
 <!-- There were `r lower_sig_stats %>% filter(SYMBOL %in% unique(t2d_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` \gls{t2d} associated genes that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations from the lower tail of the distributions. There were a total of `r upper_sig_stats %>% filter(SYMBOL %in% unique(t2d_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` genes that had a significant window in any Polynesian population. In the lower tail there were `r lower_sig_stats %>% filter(SYMBOL %in% unique(t2d_GR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(pop, SYMBOL) %>% distinct() %>% group_by(SYMBOL) %>% tally() %>% filter(n ==4) %>% NROW()` genes with at least a window that met the significance threshold in the Polynesian populations. Only _THADA_ had windows from \gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze} in the \gls{ton} population from the Polynesian populations. This was also true for the \gls{cdx} and \gls{chs} populations. _ARL15_, _MACF1_, _RREB1_, and _THADA_ each had in all Polynesian populations, at least one statistic that was significant in the lower tail. In the upper tail, _HLA-B_, _HMGA2_, _HNF1B_, _PTPRD_, _RBMS1_, _SGCG_, _TCF7L2_, and _THADA_ each had, in all Polynesian populations, at least one statistic that was significant. -->
 
-Again, most of the loci that were associated with \gls{t2d} followed the same trend of values within a super population being similar, and differences between the super populations. An example where this wasn't the case was _SSR1_,  where all populations, except the Eastern Polynesian populations were very similar and close to zero, whereas the Eastern Polynesian populations were negative in all statistics, but not extreme enough to be in the 1^st^ percentile.
+Again, most of the loci that were associated with \gls{t2d} followed the same trend of values within a super population being similar, and differences between the super populations. An example where this was not the case was _SSR1_,  where all populations, except the Eastern Polynesian populations were very similar and close to zero, whereas the Eastern Polynesian populations were negative in all statistics, but not extreme enough to be in the 1^st^ percentile.
 
 ```{markdown, eval = FALSE}
 any stat
@@ -2403,7 +2403,7 @@ As reported in section \@ref(fdrresults), only the \gls{fdr} for the Polynesian 
 
 Another limitation was a lack of 'internal replication', for example, the Eastern and Western Polynesian pairs, where a region would only meet the threshold for significance in a single population and not in the paired population. This could also just be a side effect of discretising a continuous distribution, and especially for values sitting close to the threshold it is easy to imagine a situation where in one population it was significant and the other it was not. An alternative approach could have been to rank all of the windows based on statistic value and determine differences and similarities in rank order between populations.
 
-The rightwards shift in the distributions of \gls{td}, \gls{flf}, and \gls{ze} largely is influenced by the low frequency variants and singletons being under-represented. This effect is due to the ascertainment bias on the \gls{snp} arrays, where there is an excess of common alleles, when compared with sequence data [@Ramirez-Soriano2009]. This shift was more noticeable in the \gls{afr} populations with the 1^st^ percentile being above zero for \gls{td} and \gls{flf}. This meant that the windows that were being compared were not always the going to be inferring the same type of selection or population demographic events as those that were from below zero. The rightward shift won't have affected all genes in a uniform manner - the impact will be different for different genes, based on the frequency of the markers they contain. This means that it can't be assumed that the genes in the 1^st^ percentile for the \gls{afr} populations are the equivalent in terms of ranking by statistic value, to those in the other populations. Nor can it be assumed that the distribution that was observed using the markers from the CoreExome would be the same that would be observed from using sequencing data.
+The rightwards shift in the distributions of \gls{td}, \gls{flf}, and \gls{ze} largely is influenced by the low frequency variants and singletons being under-represented. This effect is due to the ascertainment bias on the \gls{snp} arrays, where there is an excess of common alleles, when compared with sequence data [@Ramirez-Soriano2009]. This shift was more noticeable in the \gls{afr} populations with the 1^st^ percentile being above zero for \gls{td} and \gls{flf}. This meant that the windows that were being compared were not always the going to be inferring the same type of selection or population demographic events as those that were from below zero. The rightward shift would not have affected all genes in a uniform manner - the impact will be different for different genes, based on the frequency of the markers they contain. This means that it can not be assumed that the genes in the 1^st^ percentile for the \gls{afr} populations are the equivalent in terms of ranking by statistic value, to those in the other populations. Nor can it be assumed that the distribution that was observed using the markers from the CoreExome would be the same that would be observed from using sequencing data.
 
 Grouping based on the clustering of the significant results in \gls{ihs} or \gls{nsl} may falsely link \glspl{snp} into a 'region of significance'. The 200 kb limit was the maximum distance that selscan by default would allow the calculation of the extended haplotype heterozygosity to extend across a gap of information before terminating. The calculation of region sharing also does not take into account the directionality of the selection. For example, one population might have favoured the ancestral allele, whereas a second favoured the derived allele, the region sharing calculation treats these as being the same and would consider them a shared region.
 
