--- a/05-Selection_and_association.Rmd
+++ b/05-Selection_and_association.Rmd
@@ -640,7 +640,7 @@ polyGout %>% filter(TEST == "ADD",  P < 1e-5)
 
 ### Comparison of haplotypic selection with gout GWAS 
 
-In order to determine if additional loci (which didn't meet the significance threshold in \gls{gwas}), had extra information from the selection tests that could prioritise the \gls{gwas} results, the gout \gls{gwas} and selection results were combined. The "European Ancestry" combination, combined the \gls{gwas} performed in the UK Biobank using the self-reported gout or \gls{ult} usage with the haplotypic selection results for the \gls{gbr} population. The "Polynesian Ancestry" combination, combined the Polynesian gout \gls{gwas} with the haplotypic selection results for the Polynesian populations of \gls{cim}, \gls{nzm}, \gls{sam}, and \gls{ton}. All of the analyses were restricted to the markers of the CoreExome \gls{snp} array. A new threshold for the combinations was used that required an |\gls{ihs}|  > 2 or |\gls{nsl}| > 2 and a \gls{gwas} P < 2 x 10^-4^. the \gls{ihs} and \gls{nsl} threshold was selected because |\gls{ihs}| or |\gls{nsl}| > 2 is equivalent to P < 0.05, since the statistics are very similar to a Z-score. A "probability score" for the combined statistics was calculated using Score~combined~ = P~GWAS~ x P~selection~, where P~selection~ was given by 1 - P(|Z|), and Z was the \gls{ihs} or \gls{nsl} value. With the Polynesian populations, the maximum |value| was used. The combined threshold was set as Score~combined~ < 5 x 10^-8^, to mirror the \gls{gwas} significance threshold.
+In order to determine if additional loci (which did not meet the significance threshold in \gls{gwas}), had extra information from the selection tests that could prioritise the \gls{gwas} results, the gout \gls{gwas} and selection results were combined. The "European Ancestry" combination, combined the \gls{gwas} performed in the UK Biobank using the self-reported gout or \gls{ult} usage with the haplotypic selection results for the \gls{gbr} population. The "Polynesian Ancestry" combination, combined the Polynesian gout \gls{gwas} with the haplotypic selection results for the Polynesian populations of \gls{cim}, \gls{nzm}, \gls{sam}, and \gls{ton}. All of the analyses were restricted to the markers of the CoreExome \gls{snp} array. A new threshold for the combinations was used that required an |\gls{ihs}|  > 2 or |\gls{nsl}| > 2 and a \gls{gwas} P < 2 x 10^-4^. the \gls{ihs} and \gls{nsl} threshold was selected because |\gls{ihs}| or |\gls{nsl}| > 2 is equivalent to P < 0.05, since the statistics are very similar to a Z-score. A "probability score" for the combined statistics was calculated using Score~combined~ = P~GWAS~ x P~selection~, where P~selection~ was given by 1 - P(|Z|), and Z was the \gls{ihs} or \gls{nsl} value. With the Polynesian populations, the maximum |value| was used. The combined threshold was set as Score~combined~ < 5 x 10^-8^, to mirror the \gls{gwas} significance threshold.
 
 
 
@@ -890,7 +890,7 @@ Heritability estimates for the variance attributed to the additive effects of co
 
 The main peak of association in the Manhattan plots (Figures \@ref(fig:manhatSelfUltAgeSexBmi) and \@ref(fig:polyManhat)) for the \gls{gwas} analyses of both the UK Biobank, and the New Zealand Polynesians was _ABCG2_, this was consistent with previous \gls{gwas} analyses for gout, compared to \gls{gwas} for serum urate which has the strongest association with _SLC2A9_ [@Kottgen2013; @Okada2012; @nakayama2017gwas]. Combining the haplotypic selection results for \gls{ihs} and \gls{nsl} from the \gls{gbr} population with the UK Biobank gout \gls{gwas} showed additional evidence at _SLC22A12_, _PTPN11_, _SLC17A3_, _SLC17A4_ , and _ADAM10_. However, from the \gls{gwas} those genes had already met the suggestive significance threshold of P < 10^-5^. All except _ADAM10_ had previously been reported as being significant at a genome-wide threshold for association with serum urate levels [@Kottgen2013]. _ADAM10_ had not been previously associated at a genome-wide threshold with either gout or serum urate levels, but had previously been reported as a strong candidate for positive selection [@Deschamps2016]. _ADAM10_ is involved in the innate immune system with the Notch signalling pathway, but also becomes down-regulated during interaction with the extracellular proteins PfSEL1/PfSEL2 of _P. falciparum_ [@Singh2009]. The strength of association weakened in the replication UK Biobank cohort for all loci that had been identified, with most showing no signs of significance except _SLC22A12_, which increased in strength of association.
 
-The combination of the New Zealand Polynesian gout \gls{gwas} with the haplotypic selection statistics of \gls{ihs} and \gls{nsl} from the Polynesian populations of \gls{cim}, \gls{nzm}, \gls{sam}, and \gls{ton} did not have any corroboration with the equivalent combination of analyses in the European ancestry cohort. The \gls{ton} population was the main source of the selection statistics that met the threshold, this could be due to the high proportion of gout patients (> 50%) that were included in the sample. Between the \gls{ihs} and \gls{nsl} based results, there was a high degree of overlap in the \glspl{snp} that met the thresholds for both, although \gls{nsl} had three \glspl{snp} that didn't meet the threshold in \gls{ihs}.
+The combination of the New Zealand Polynesian gout \gls{gwas} with the haplotypic selection statistics of \gls{ihs} and \gls{nsl} from the Polynesian populations of \gls{cim}, \gls{nzm}, \gls{sam}, and \gls{ton} did not have any corroboration with the equivalent combination of analyses in the European ancestry cohort. The \gls{ton} population was the main source of the selection statistics that met the threshold, this could be due to the high proportion of gout patients (> 50%) that were included in the sample. Between the \gls{ihs} and \gls{nsl} based results, there was a high degree of overlap in the \glspl{snp} that met the thresholds for both, although \gls{nsl} had three \glspl{snp} that did not meet the threshold in \gls{ihs}.
 
 <!-- > Rs12908919 (_PPCDC_) was the only \gls{snp} that had more than one Polynesian population with both \gls{ihs} and \gls{nsl} in the top 5%. _PPCDC_ encodes phosphopantothenoylcysteine decarboxylase -->
 
