--- a/06-Conclusion_discussions.Rmd
+++ b/06-Conclusion_discussions.Rmd
@@ -103,9 +103,9 @@ Another limiting factor for the analyses in chapters \@ref(selectionResults), \@
 <!-- - focus on positive selection -->
 <!-- - time-frame of the statistics used -->
 
-The statistics used in this thesis have a wide range of time-frames they are powered for, however, many of the differences that are being looked at are in the < 10k\gls{ya} time frame, so some of these methods might not be powered appropriately. In addition, the nature of the \gls{snp} array data means that some of the newer methods aren't necessarily applicable, for instance singleton-density score [@Field2016]. This is especially true where the \gls{snp} array data are missing very low frequency variants due to an ascertainment bias in the markers on the \gls{snp} array, and from subsequent quality control procedures that might have been implemented.
+The statistics used in this thesis have a wide range of time-frames they are powered for, however, many of the differences that are being looked at are in the < 10k\gls{ya} time frame, so some of these methods might not be powered appropriately. In addition, the nature of the \gls{snp} array data means that some of the newer methods are not necessarily applicable, for instance singleton-density score [@Field2016]. This is especially true where the \gls{snp} array data are missing very low frequency variants due to an ascertainment bias in the markers on the \gls{snp} array, and from subsequent quality control procedures that might have been implemented.
 
-Using the \gls{gwas} catalog provided a convenient method to incorporate many of the known genetic associations found from \gls{gwas} into the selection analysis. There were a few effects from this approach that will have influenced the results in the analyses involving the \gls{gwas} catalog derived gene lists. First, the associations were only for \gls{gwas}, and didn't report on associations that were found in a non-\gls{gwas} setting, such as candidate genes, so some true genetic associations may have been missed. The impact of this on the conclusions is likely to be small, given that a trend being searched for was a systematic selection signal across pathways (section \@ref(pathEnrich)). Given the number of genes in a pathway that showed signs of selection and the pathway sizes involved, missing a few loci per pathway is unlikely to have made this systematic selection signal appear. Secondly, there is the fact that a large proportion of the \gls{gwas} that have been done and reported in the \gls{gwas} catalog are for European populations [@Haga2010;@Popejoy2016], and the focus of this research was in Polynesian populations. The result of this will be population-specific associations that are missed, so incorporation of other association information, such as candidate genes or curated gene lists would be beneficial. The use of the \gls{gwas} catalog, while extremely useful in terms of defining of gene lists, may have 'cast a wide net' for genes with associations, than perhaps an expertly curated candidate-gene list. By having an extended list, this may have increased the 'noise' in the selection signals which meant that trends in the loci that showed signs of selection for a trait were harder to distinguish.
+Using the \gls{gwas} catalog provided a convenient method to incorporate many of the known genetic associations found from \gls{gwas} into the selection analysis. There were a few effects from this approach that will have influenced the results in the analyses involving the \gls{gwas} catalog derived gene lists. First, the associations were only for \gls{gwas}, and did not report on associations that were found in a non-\gls{gwas} setting, such as candidate genes, so some true genetic associations may have been missed. The impact of this on the conclusions is likely to be small, given that a trend being searched for was a systematic selection signal across pathways (section \@ref(pathEnrich)). Given the number of genes in a pathway that showed signs of selection and the pathway sizes involved, missing a few loci per pathway is unlikely to have made this systematic selection signal appear. Secondly, there is the fact that a large proportion of the \gls{gwas} that have been done and reported in the \gls{gwas} catalog are for European populations [@Haga2010;@Popejoy2016], and the focus of this research was in Polynesian populations. The result of this will be population-specific associations that are missed, so incorporation of other association information, such as candidate genes or curated gene lists would be beneficial. The use of the \gls{gwas} catalog, while extremely useful in terms of defining of gene lists, may have 'cast a wide net' for genes with associations, than perhaps an expertly curated candidate-gene list. By having an extended list, this may have increased the 'noise' in the selection signals which meant that trends in the loci that showed signs of selection for a trait were harder to distinguish.
 
 The technicalities of annotating gene information onto \glspl{snp} and genomic regions can be challenging, especially with regard to annotation of intergenic regions where there might be no clear nearest gene. Consideration also needs to be given to the functional impact of variants on expression, or the effects of regulatory elements such as DNAse hypersensitivity sites. The incorporation of this information was limited, but with new annotation and analysis pipelines being developed [@Ferrero2018], future work will benefit from including these features in the analysis.
 
