--- a/abstract.tex
+++ b/abstract.tex
@@ -4,4 +4,4 @@ Serum urate has been associated with metabolic disorders such as obesity, \gls{t
 
 There was no evidence of wide-spread selection at genes associated with urate and gout, or related metabolic disorders, but there was evidence at some individual loci. Pathway analysis showed that were enriched for genes with signatures of selection, had a dominance of metabolic pathways. Calcium related transport and signaling was a theme amongst loci that displayed signs of possible selection. Regions of the genome that were possibly selected in modern-day Polynesian populations also had similarities to those of modern-day East Asian populations.
 
-This thesis has provided identification and characterisation of regions in the genome with possible evidence of genetic selection in Polynesian populations, that previously wasn't available. It has also provided insight into the role of genetic selection with respect to urate and metabolic disease.
+This thesis has provided identification and characterisation of regions in the genome with possible evidence of genetic selection in Polynesian populations, that previously was not available. It has also provided insight into the role of genetic selection with respect to urate and metabolic disease.
